comment out citations to figures files, no need for figure files to compile

--- a/viscosity_method.tex
+++ b/viscosity_method.tex
@@ -813,7 +813,7 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/03-nvt/visc-3.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/03-nvt/visc-3.eps}
 \caption{}
 \label{fig:visc-longtraj}
 \end{center}
@@ -823,9 +823,9 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/density-2.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/density-1.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/density-2.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/density-1.eps}
 \caption{}
 \label{fig:density}
 \end{center}
@@ -837,9 +837,9 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-2.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-1.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-2.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-1.eps}
 \caption{}
 \label{fig:ethanol-ave}
 \end{center}
@@ -849,9 +849,7 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-%\includegraphics[angle=0,width=3.2in]{/afs/crc.nd.edu/user/y/yzhang19/work/20-viscosity/02-C4C1im/04-nvt-swarm/350/ave/viscosity-1.eps}
-%\\
-\includegraphics[angle=0,width=3.2in]{/afs/crc.nd.edu/user/y/yzhang19/work/20-viscosity/02-C4C1im/04-nvt-swarm/350/ave/viscosity-2.eps}
+%\includegraphics[angle=0,width=3.2in]{/afs/crc.nd.edu/user/y/yzhang19/work/20-viscosity/02-C4C1im/04-nvt-swarm/350/ave/viscosity-2.eps}
 \caption{}
 \label{fig:t2weight}
 \end{center}
@@ -862,7 +860,7 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-22.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-22.eps}
 \caption{}
 \label{fig:ethanol-2ps}
 \end{center}
@@ -873,7 +871,7 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/ave/viscosity-4.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/ave/viscosity-4.eps}
 \caption{}
 \label{fig:ethanol-fit}
 \end{center}
@@ -884,9 +882,9 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-ethanol-1.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-ethanol-3.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-ethanol-1.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-ethanol-3.eps}
 \caption{}
 \label{fig:ethanol-visc}
 \end{center}
@@ -898,13 +896,13 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/ave/viscosity-3.eps}
-\vspace{0.2in}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-4.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/ave/standard_error/sigma-1.eps}
-\vspace{0.2in}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/visc-conv-1.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/ave/viscosity-3.eps}
+%\vspace{0.2in}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-4.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/ave/standard_error/sigma-1.eps}
+%\vspace{0.2in}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/visc-conv-1.eps}
 \caption{}
 \label{fig:ethanol-num}
 \end{center}
@@ -915,9 +913,9 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/viscosity-2.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/visc-conv-5.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/viscosity-2.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/visc-conv-5.eps}
 \caption{}
 \label{fig:ethanol-length}
 \end{center}
@@ -927,7 +925,7 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/viscosity-1.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/viscosity-1.eps}
 \caption{}
 \label{fig:ethanol-boxsize}
 \end{center}
@@ -940,11 +938,11 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/visc-2.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/visc-1.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/visc-22.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/visc-2.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/visc-1.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/visc-22.eps}
 \caption{}
 \label{fig:bmim-ave}
 \end{center}
@@ -955,9 +953,9 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-bmim-2.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-bmim-1.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-bmim-2.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-bmim-1.eps}
 \caption{}
 \label{fig:bmim-visc}
 \end{center}
@@ -968,7 +966,7 @@ whereas the b parameters are close 0.5 for ethanol.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/350/visc-conv-1.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/350/visc-conv-1.eps}
 \caption{}
 \label{fig:bmim-num}
 \end{center}
